chore: remove invites events
